# gswa-rdf-delta-consumer

./: .env-template  .gitignore  Dockerfile  README.md  Taskfile.yml  azure-pipelines.yml  deploy-gswaepc.yaml  deploy-gswardc.yaml  deploy-gswasdt.yaml  function_app.py  local.settings.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/service-bus/: config.json
.devcontainer/sql/: postCreateCommand.sh
.github/workflows/: release.yml
db_trigger/: .env-template  README.md  Taskfile.yml  function_app.py  pyproject.toml  requirements.txt
db_trigger/db_trigger/: database.py  env.py  servicebus.py  settings.py  setup.py
db_trigger/src/db_trigger/: settings.py
event_persistence_consumer/: .env-template  .funcignore  README.md  Taskfile.yml  function_app.py  hello.py  init_db.py  insert.py  pyproject.toml  requirements-dev.txt  requirements.txt  sb_producer.py  set_publish.py  users.trig
event_persistence_consumer/event_persistence_consumer/: database.py  servicebus.py  settings.py  setup.py
event_persistence_consumer/src/event_persistence_consumer/: database.py  env.py  settings.py  setup.py
event_persistence_consumer/tests/: conftest.py  test_db.py
rdf_delta_consumer/: .funcignore  README.md  Taskfile.yml  function_app.py  host.json  requirements-dev.txt  requirements.txt
src/: consumer.py
src/gswa_rdf_delta_consumer/: __init__.py  settings.py
